<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mobithink</string>

    <!-- API Key -->
    <string name="google_maps_api">AIzaSyDNRm3UOtZ9_o-Y2Tpoq5w2S8aj3P2K7eo</string>

    <!-- Main Page-->
    <string name="fixed_text">Analyse des conditions d’exploitation de lignes de transports publics</string>
    <string name="analyze">Analyser</string>
    <string name="consult">Consulter</string>
    <string name="server_status">Server status : </string>

    <!--choice_line_from_analyze-->
    <string name="cityName">Ville</string>
    <string name="lineName">Ligne</string>
    <string name="directionName">Direction</string>
    <string name="vehicleCapacity">Capacité du véhicule</string>
    <string name="start">Démarrer</string>

    <!--new_line-->
    <string name="departureStation" tools:ignore="UnusedResources">Station de départ</string>
    <string name="addStation">Ajouter une station</string>
    <string name="interurban">Interurbain</string>
    <string name="create">Créer</string>

    <!--Driving-->
    <string name="nextStation">Prochaine station</string>
    <string name="event" tools:ignore="UnusedResources">Evènement</string>
    <string name="course">Parcours :</string>
    <string name="section">Tronçon :</string>
    <string name="dir">dir.</string>
    <string name="indriving">En section courante</string>
    <string name="in_crossroad">Au carrefour</string>
    <string name="Terminus">Terminus</string>
    <string name="current_speed">%1$s km/h</string>

    <string-array name="condition_codes_icons">
        <item>&#xF0BC;</item>
        <item>&#xF0BC;</item>
        <item>&#xF0BC;</item>
        <item>&#xF0BC;</item>
        <item>&#xF0BC;</item>
        <item>&#xF082;</item>
        <item>&#xF082;</item>
        <item>&#xF082;</item>
        <item>&#xF082;</item>
        <item>&#xF082;</item>
        <item>&#xF082;</item>
        <item>&#xF082;</item>
        <item>&#xF082;</item>
        <item>&#xF082;</item>
        <item>&#xF082;</item>
        <item>&#xF00A;</item>
        <item>&#xF082;</item>
        <item>&#xF063;</item>
        <item>&#xF063;</item>
        <item>&#xF063;</item>
        <item>&#xF063;</item>
        <item>&#xF063;</item>
        <item>&#xF074;</item>
        <item>&#xF063;</item>
        <item>&#xF011;</item>
        <item>&#xF011;</item>
        <item>&#xF013;</item>
        <item>&#xF031;</item>
        <item>&#xF002;</item>
        <item>&#xF031;</item>
        <item>&#xF002;</item>
        <item>&#xF00D;</item>
        <item>&#xF00D;</item>
        <item>&#xF02E;</item>
        <item>&#xF00D;</item>
        <item>&#xF065;</item>
        <item>&#xF00D;</item>
        <item>&#xF007;</item>
        <item>&#xF007;</item>
        <item>&#xF007;</item>
        <item>&#xF007;</item>
        <item>&#xF007;</item>
        <item>&#xF007;</item>
        <item>&#xF006;</item>
        <item>&#xF00C;</item>
        <item>&#xF005;</item>
        <item>&#xF00A;</item>
        <item>&#xF005;</item>
        <item>&#xF07B;</item>
    </string-array>

    <!--StationActivity-->
    <string name="boarding">Montée</string>
    <string name="exit">Descente</string>
    <string name="cancellation">Annulation</string>
    <string name="running" tools:ignore="UnusedResources">en cours</string>

    <!--parameters-->
    <string name="parameters">Paramètres</string>
    <string name="frequency">Fréquence relevée en roulage (en sec) : </string>
    <string name="radius">Rayon de couverture des stations (en m) : </string>
    <string name="cost_production_by_minut"> Coût de production à la minute (en euro/min) : </string>
    <string name="cost_production_by_kilometer">Coût de production au kilomètre (en euro/km) : </string>
    <string name="register">Enregistrer</string>

    <!--choice_line_from_consult-->
    <string name="recorded">Saisie du</string>

    <!-- provision_tab1-->
    <string name="interstation" tools:ignore="UnusedResources">Interstations</string>
    <string name="current_performance">Performance actuelle</string>
    <string name="marge_performance">Marge de performance</string>
    <string name="saving">Gain :</string>

    <!-- speed_tab2-->
    <string name="speed">Vitesse</string>

    <!--event_tab3-->
    <string name="total_trip">Parcours total</string>
    <string name="event_in_actual_section">Evènement section courante</string>
    <string name="event_crossroad">Evènement carrefours</string>
    <string name="event_in_station">Evènement stations</string>
    <string name="total_trip_time">Temps de parcours total :</string>
    <string name="average_speed">Vitesse moyenne :</string>
    <string name="decomposition">Décomposition :</string>
    <string name="loss_total_time">Perte de temps total : </string>
    <string name="saving_possible_time">Gain de temps envisageable :</string>
    <string name="saving_in_euro">Gain en euro : </string>
    <string name="number_of_events">Nombre d\'évènements :</string>
    <string name="total_time_events">Temps cumulé des évènements :</string>
    <string name="load">Poids (% par rapport au temps réel du parcours) :</string>
    <string name="type_event">Type d\'évènements :</string>
    <string name="time">Temps :</string>
    <string name="retranscription_voice_memo">Retranscription mémo vocal : </string>
    <string name="impact_bus_performance">Impacts sur les performances du bus :</string>
    <string name="layout_to_favor">Aménagements à privilégier :</string>
    <string name="in_driving">En roulage </string>
    <string name="in_station">En station </string>
    <string name="impact">Impact :</string>

    <!--capacity_tab4-->
    <string name="capacity">Charge</string>
    <string name="capacities">Capacité :</string>
    <string name="max">max :</string>
    <string name="average">moy :</string>
    <string name="min">min :</string>
    <string name="capacityless50">Part du trajet où la charge est inférieure à 50%</string>

    <!--summary-tab5-->
    <string name="enteringData">Saisi le</string>
    <string name="speed_in_driving">Vitesse moyenne en section courante</string>
    <string name="time_in_crossroad">Temps passé aux carrefours</string>
    <string name="time_in_station">Temps passé en stations</string>
    <string name="indicator_adaptation_capacity">Indicateur d\'adaptation de la capacité</string>
    <string name="indicator_performance_time">Indicateur de performance de temps</string>
    <string name="indicator_performance_confort_security">Indicateur de performance "confort et sécurité"</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>



</resources>
