<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/mainRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <TextView
            android:id="@+id/totalTripTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_marginBottom="@dimen/regular_margin"
            android:layout_marginTop="@dimen/double_regular_margin"
            android:text="@string/total_trip_time"/>

        <TextView
            android:id="@+id/totalTripTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/totalTripTime"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_alignBaseline="@+id/totalTripTime"/>

        <TextView
            android:id="@+id/averageSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/totalTripTime"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_marginBottom="@dimen/regular_margin"
            android:text="@string/average_speed"/>

        <TextView
            android:id="@+id/averageSpeedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/averageSpeed"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_alignBaseline="@+id/averageSpeed"/>

        <TextView
            android:id="@+id/decomposition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/averageSpeed"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_marginBottom="@dimen/regular_margin"
            android:text="@string/decomposition"/>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/decompositionPieChart"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_toEndOf="@+id/decomposition"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="@dimen/regular_margin"></com.github.mikephil.charting.charts.PieChart>

        <TextView
            android:id="@+id/lossOfTotalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/decompositionPieChart"
            android:layout_marginBottom="@dimen/regular_margin"
            android:text="@string/loss_total_time"/>

        <TextView
            android:id="@+id/lossOfTotalTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/lossOfTotalTime"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_alignBaseline="@+id/lossOfTotalTime"/>

        <TextView
            android:id="@+id/savingOfPossibleTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lossOfTotalTime"
            android:layout_marginBottom="@dimen/regular_margin"
            android:text="@string/saving_possible_time"/>

        <TextView
            android:id="@+id/savingOfPossibleTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/savingOfPossibleTime"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_alignBaseline="@+id/savingOfPossibleTime"/>

        <TextView
            android:id="@+id/savingInEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/savingOfPossibleTime"
            android:layout_marginBottom="@dimen/regular_margin"
            android:text="@string/saving_in_euro"/>

        <TextView
            android:id="@+id/savingInEuroTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/savingInEuro"
            android:layout_marginStart="@dimen/regular_margin"
            android:layout_alignBaseline="@+id/savingInEuro"/>
    </RelativeLayout>

</ScrollView>