<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobithink.carbon.consultation.fragments.SpeedTab2">

    <TextView
        android:id="@+id/speedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/regular_margin"
        android:layout_marginTop="@dimen/double_regular_margin"
        android:layout_marginEnd="50dp"
        android:text="@string/speed" />

    <TextView
        android:id="@+id/maxSpeedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/speedTextView"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="@dimen/regular_margin"
        android:text="@string/max"
        android:textColor="@color/green_chart" />

    <TextView
        android:id="@+id/maxSpeedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/maxSpeedTextView"
        android:layout_toEndOf="@+id/maxSpeedTextView"
        android:layout_marginStart="@dimen/regular_margin"
        android:text="@string/max"
        android:textColor="@color/green_chart" />

    <TextView
        android:id="@+id/averageSpeedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/maxSpeedTextView"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="@dimen/regular_margin"
        android:text="@string/average"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/averageSpeedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/averageSpeedTextView"
        android:layout_toEndOf="@+id/averageSpeedTextView"
        android:layout_marginStart="@dimen/regular_margin"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/minSpeedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/averageSpeedTextView"
        android:layout_marginEnd="80dp"
        android:text="@string/min"
        android:textColor="@color/red_chart" />

    <TextView
        android:id="@+id/minSpeedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/minSpeedTextView"
        android:layout_toEndOf="@+id/minSpeedTextView"
        android:layout_marginStart="@dimen/regular_margin"
        android:textColor="@color/red_chart" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/multi_line_chart"
        android:layout_width="630dp"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/double_regular_margin"></com.github.mikephil.charting.charts.LineChart>

</RelativeLayout>
