<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/analyzeLineToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/mobiThinkBlue"
        android:background="@color/veryLightGrey"
        app:navigationIcon="@mipmap/ic_blue_mobithink_arrow"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/city_textinputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/regular_margin"
        android:layout_below="@+id/analyzeLineToolBar"
        app:errorTextAppearance="@style/MyErrorText"
        app:errorEnabled="true">
        <AutoCompleteTextView
            android:id="@+id/Writing_City_Name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="@dimen/input_text_size"
            android:textColor="@color/primary_text"
            android:maxLines="1"
            android:hint="@string/cityName"
            android:inputType="text"
            android:imeOptions="actionDone"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/line_textinputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/regular_margin"
        android:layout_below="@+id/city_textinputlayout"
        app:errorTextAppearance="@style/MyErrorText"
        app:errorEnabled="true"
        android:clickable="true">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/Line_edtitext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="@dimen/input_text_size"
            android:textColor="@color/primary_text"
            android:maxLines="1"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:hint="@string/lineName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/direction_textinputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/regular_margin"
        android:layout_below="@+id/line_textinputlayout"
        app:errorTextAppearance="@style/MyErrorText"
        app:errorEnabled="true"
        android:clickable="true">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/Writing_Direction"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="@dimen/input_text_size"
            android:textColor="@color/primary_text"
            android:maxLines="1"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:hint="@string/directionName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/capacity_textinputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/regular_margin"
        android:layout_below="@+id/direction_textinputlayout"
        app:errorTextAppearance="@style/MyErrorText"
        app:errorEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/Writing_Vehicle_Capacity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="@dimen/input_text_size"
            android:textColor="@color/primary_text"
            android:maxLines="1"
            android:hint="@string/vehicleCapacity"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/createNewLine"
        android:layout_width="@dimen/regular_size_rounded_button"
        android:layout_height="@dimen/regular_size_rounded_button"
        android:layout_below="@+id/capacity_textinputlayout"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:background="@mipmap/ic_green_plus"/>
    
    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:text="@string/start"
        android:textColor="@color/mobiThinkBlue"
        android:background="@color/veryLightGrey"/>
</RelativeLayout>